# airflow-tm1

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-test.yml
airflow_provider_tm1/: __init__.py
airflow_provider_tm1/hooks/: tm1.py
airflow_providers_tm1/: __init__.py
airflow_tm1/: __init__.py
airflow_tm1/hooks/: tm1.py
docs/: conf.py  index.rst  installation.rst
tests_integration/: Dockerfile  docker-compose.yaml
tests_integration/plugins/: airflow_providers_tm1-0.0.6-py3-none-any.whl
tests_integration/tm1models/24Retail/: myprocess.pro
